--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to My GitHub Pages</title>
+    <title>Test Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,10 +39,11 @@
             color: #fff;
         }
     </style>
+    <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/03523c35e9cc1a569c5311a73205bd0c.js"></script>
 </head>
 <body>
     <header>
-        <h1>Welcome to My GitHub Pages</h1>
+        <h1></h1>
     </header>
 
     <main>
@@ -58,7 +59,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p></p>
     </footer>
 </body>
 </html>
